tests/ui/parser/issues/issue-87635.stderr
error: expected one of `->`, `where`, or `{`, found `}`
  --> $DIR/issue-87635.rs:6:1
   |
LL |     pub fn bar()
   |            ---  - expected one of `->`, `where`, or `{`
   |            |
   |            while parsing this `fn`
LL |
LL | }
   | ^ unexpected token

error: associated function in `impl` without body
  --> $DIR/issue-87635.rs:4:5
   |
LL |     pub fn bar()
   |     ^^^^^^^^^^^^- help: provide a definition for the function: `{ <body> }`

error: aborting due to 2 previous errors

